# temporal-flight-booking

./: DockerfileWorker  DockerfileWorkflow  README.md  app.py  encryption_codec.py  flights_activities.py  flights_client.py  flights_workflow.py  pyproject.toml  worker.py
templates/: base.html  confirmation.html  flights.html  index.html  payment.html  select_seat.html
yaml/: deployment.yaml
yaml/certificates/: certificate.yaml
yaml/deployments/: ui-deployment.yaml  worker-deployment.yaml
yaml/ingress/: ingressroute.yaml  ingressroute_http.yaml
yaml/secrets/: chatgpt-secret.yaml  stripe-secret.yaml  tls-secret.yaml
yaml/services/: metrics-monitor.yaml  metrics-service.yaml  ui-service.yaml
