[tool.poetry]
name = "flight-booking-app"
version = "0.1.0"
description = "Simple Flight Booking App"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = {extras = ["async"], version = "^2.2.3"}
stripe = "^2.76.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
temporalio = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
